2002-02-08  Larry Ewing  <lewing@ximian.com>

	* link.c (test_clicked): handler for new "Test URL" button.
	(link_widget): add a button to the url frame to open the current
	url.

2002-01-31  Radek Doulik  <rodo@ximian.com>

	* Editor.idl: undo_begin, undo_end --> undoBegin, undoEnd, added
	ignoreWord method, which tells spell checker to ignore given word

	* GNOME_GtkHTML_Editor.xml.in: added C-S-l for spell check document

2002-01-30  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (LDADD): removed unwanted -dynamic link flag

2002-01-27  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c (editor_set_prop): add bonobo property
	for the title.

	* body.c (body_apply_cb): use gtk_html_set_title.

2002-01-23  Radek Doulik  <rodo@ximian.com>

	* added Text... and Paragraph... entries to menu

	* editor-control-factory.c (editor_api_command): use
	popup_show_at_cursor instead of popup_show

	* popup.c (popup_show_at_cursor): new function, shows popup menu
	at text cursor position
	(set_position): helper function for popup_show_at_cursor

2002-01-15  Ettore Perazzoli  <ettore@ximian.com>

	* spell.c (spell_create_language_menu): Just return if cd->dict is
	NIL.

2002-01-14  Radek Doulik  <rodo@ximian.com>

	* menubar.c: implemented Format/Page...

	* GNOME_GtkHTML_Editor.xml.in: added Format/Page...

2002-01-08  Radek Doulik  <rodo@ximian.com>

	* dialog.c (run_dialog): run dialog to make it modal

	* properties.c (gtk_html_edit_properties_dialog_new): set dialog parent

	* dialog.c (run_dialog): set dialog parent

2002-01-07  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (GTKHTML_EDITOR_SOURCES_COMMON): removed link.[ch]

	* text.c (text_properties): place bold/italic/underline/strikeout
	in 2x2 table

	* body.c (body_properties): set pixmap entry preview to FALSE

2001-12-11  Radek Doulik  <rodo@ximian.com>

	* added new link dialogs to glade, added new percent option value
	in image editor - Follow, this makes dimension follow original